<resources>
    <string name="app_name">MagnificentChef</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="applicationName">MagnificentChef</string>
    <string name="cook">Cook With Confidence</string>
    <string name="google">Join With Google</string>
    <string name="email">Join With Email</string>
    <string name="account">Already have account?</string>
    <string name="login">Log In</string>
    <string name="Magnifient">Magnificent Chef</string>
    <string name="userName">User name</string>
    <string name="first">First Name</string>
    <string name="last">Last Name</string>
    <string name="emailAccount">Email</string>
    <string name="password">Password</string>
    <string name="sign">Sign Up</string>
    <string name="textLogin">Welcome back! You ‘re just a tap away from something delicious.</string>
    <string name="term">By continuing, you agree to the Terms of </string>
    <string name="terms">By continuing, you agree to the Terms of </string>
    <string name="your_email_and_password_is_incorrect">Your Email and Password is incorrect!</string>
    <string name="search">Search</string>
    <string name="Home">home</string>
    <string name="PlanMeal">PlanMeal</string>
    <string name="Save">Save</string>
    <string name="daily">Daily Inspiration</string>
    <string name="reciepes">Search Recipes</string>
    <string name="ingredients">Search by Ingredients</string>
    <string name="meal_">Search By Meal</string>
    <string name="country">Search by Country</string>
    <string name="logout">LogOut</string>
    <string name="callus">Call us</string>
    <string name="Daily_Inspiration">Daily Inspiration</string>
    <string name="meal">Meal</string>
    <string name="more_you_might_like">More you might like</string>
    <string name="check">Check</string>
    <string name="invalid_email_and_password_message">Your email and password is invalid!</string>
    <string name="email_password_incorrect">\"Incorrect information entered, Email or password \"</string>
    <string name="dublication">\"The email address is already in use by another account \"</string>

    <string name="week">This Week</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="add">Add</string>
    <string name="skip_button">Skip</string>
    <string name="preference_file_key">sharedPref</string>
    <string name="save">Saved Recipes</string>
    <string name="recipes_are_based_on_your_meal_plan_preferences">Recipes are based on your meal plan preferences</string>
    <string name="add_recipe_from_search">Add Recipe from Search</string>
    <string name="log_out">Log out</string>
    <string name="header">The key to a good meal is simplicity and the right seasoning</string>
    <string name="skip"><u>Skip</u></string>
    <string name="get">Get Started</string>
    <string name="slow_or_no_internet_connections_please_check_your_internet_settings">Slow or no internet connections. Please check your internet settings</string>
    <string name="whoops">Whoops!</string>

</resources>