<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.sign_up.SignUpFragment">


    <EditText
        android:id="@+id/password_tv"
        android:layout_width="330dp"
        android:layout_height="49dp"
        android:layout_marginBottom="96dp"
        android:background="@drawable/round_btn"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/signUp_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/email_TV"
        android:layout_width="330dp"
        android:layout_height="49dp"
        android:layout_marginTop="256dp"
        android:background="@drawable/round_btn"
        android:ems="10"
        android:hint="@string/emailAccount"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="118dp"
        android:layout_height="32dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="140dp"
        android:text="@string/emailAccount"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_nametv" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="118dp"
        android:layout_height="32dp"
        android:layout_marginTop="28dp"
        android:text="@string/password"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.139"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_TV" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="118dp"
        android:layout_height="32dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        android:text="@string/first"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_nametv" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="118dp"
        android:layout_height="32dp"
        android:layout_marginTop="44dp"
        android:text="@string/last"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/user_nametv"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/Magnifient"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="133dp"
        android:layout_height="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/userName"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.133"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/user_nametv"
        android:layout_width="216dp"
        android:layout_height="39dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/round_btn"
        android:ems="10"
        android:hint="@string/userName"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.184"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/first_nametv"
        android:layout_width="132dp"
        android:layout_height="24dp"
        android:background="@drawable/round_btn"
        android:ems="10"
        android:hint="@string/first"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/last_nameTv"
        app:layout_constraintEnd_toStartOf="@+id/last_nameTv"
        app:layout_constraintHorizontal_bias="0.434"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/last_nameTv"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/last_nameTv"
        android:layout_width="132dp"
        android:layout_height="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="52dp"
        android:background="@drawable/round_btn"
        android:ems="10"
        android:hint="@string/last"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.958"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        tools:ignore="TouchTargetSizeCheck"

        />

    <Button
        android:id="@+id/signUp_btn"
        android:layout_width="324dp"
        android:layout_height="54dp"
        android:layout_marginBottom="44dp"
        android:background="@drawable/round_btn"
        android:backgroundTint="@color/black"
        android:text="@string/sign"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>